# invenio-moodle

./: .editorconfig  .ruff.toml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
docs/: api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_moodle/: __init__.py  api.py  cli.py  click_param_types.py  config.py  convert.py  decorators.py  ext.py  files.py  jobs.py  links.py  proxies.py  records.py  schemas.py  services.py  tasks.py  types.py  utils.py
tests/: conftest.py  test_convert.py  test_invenio_moodle.py  test_schema.py  test_types.py
tests/data/: expected_course.json  expected_file.json  expected_unit.json  lom_metadata.json  minimal_record.json
