# -*- coding: utf-8 -*-
#
# Copyright (C) 2022 Graz University of Technology.
#
# invenio-moodle is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

#
# metadata and options
#
[metadata]
name = invenio-moodle
version = attr: invenio_moodle.__version__
description = "Provides API for Moodle."
long_description = file: README.rst, CHANGES.rst
keywords = invenio_moodle invenio moodle teachcenter
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
url = https://github.com/tu-graz-library/invenio-moodle
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
pacakges = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    click>=8.0.0
    click-params>=0.4.0
    invenio-records-lom>=0.10.0

[options.extras_require]
tests =
    flask_babelex>=0.9.4 # to be removed after migrated to flask-babel
    flask_resources<1.0.0
    invenio-app>=1.3.3,<2.0.0
    invenio-cache>=1.0.6
    invenio-config-tugraz>=0.11.0
    invenio-db[postgresql,versioning]>=1.0.13,<1.1.0
    invenio-records-resources<2.0.0
    invenio-search[opensearch2]>=2.2.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.3
    ruff>=0.0.270
    Sphinx>=4.4.0
    sphinx-autodoc-typehints>=1.10.3
    invenio-i18n>=1.0.0,<2.0.0
    invenio-records-resources==1.0.9
    invenio-communities==4.1.2
    invenio-administration==1.0.6
    invenio-vocabularies==1.0.4
    invenio-drafts-resources==1.0.4
    invenio-requests==1.0.5
    invenio-administration==1.0.6
    invenio-theme==1.4.8
    invenio-users-resources==1.0.2

[options.entry_points]
flask.commands =
    moodle = invenio_moodle.cli:moodle
invenio_base.apps =
    invenio_moodle = invenio_moodle:InvenioMoodle
invenio_base.api_apps =
    invenio_moodle = invenio_moodle:InvenioMoodle
invenio_celery.tasks =
    moodle = invenio_moodle.tasks

[aliases]
test = pytest

[bdist_wheel]
universal = 1

#
# Documentation
#
[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

#
# Linting
#
[check-manifest]
ignore =
    *-requirements.txt

[flake8]
max-line-length = 88
extend-ignore = E203
select = C,E,F,W,B,B950
ignore = E501

[isort]
known_first_party = invenio_moodle
profile = black

[pydocstyle]
add_ignore = D401

[pylint.messages_control]
disable = fixme, invalid-name, line-too-long, no-member, too-few-public-methods, too-many-arguments

[tool:pytest]
addopts = --black --cov=invenio_moodle --cov-report=term-missing --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_moodle
live_server_scope = module
