# -*- coding: utf-8 -*-
#
# Copyright (C) 2022-2024 Graz University of Technology.
#
# invenio-moodle is free software; you can redistribute it and/or modify
# it under the terms of the MIT License; see LICENSE file for more details.

#
# metadata and options
#
[metadata]
name = invenio-moodle
version = attr: invenio_moodle.__version__
description = "Provides API for Moodle."
long_description = file: README.rst, CHANGES.rst
keywords = invenio_moodle invenio moodle teachcenter
license = MIT
author = "Graz University of Technology"
author_email = info@tugraz.at
url = https://github.com/tu-graz-library/invenio-moodle
platforms = any
classifiers =
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    click>=8.0.0
    click-params>=0.4.0
    invenio-celery>=1.2.5
    requests>=2.0.0

[options.extras_require]
tests =
    pytest-black-ng>=0.4.0
    pytest-invenio>=1.4.3
    ruff>=0.4.10
    Sphinx>=4.4.0
    sphinx-autodoc-typehints>=1.10.3


[options.entry_points]
flask.commands =
    moodle = invenio_moodle.cli:moodle
invenio_base.apps =
    invenio_moodle = invenio_moodle:InvenioMoodle
invenio_base.api_apps =
    invenio_moodle = invenio_moodle:InvenioMoodle
invenio_celery.tasks =
    moodle = invenio_moodle.tasks

[aliases]
test = pytest

[bdist_wheel]
universal = 1

#
# Documentation
#
[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

#
# Linting
#
[check-manifest]
ignore = *-requirements.txt

[isort]
profile = black

[tool:pytest]
addopts = --black --cov=invenio_moodle --cov-report=term-missing --doctest-glob="*.rst" --doctest-modules
testpaths = tests invenio_moodle
